# news_recommendation_project_v2

./: .gitignore  README.md  categories.json  final_script.sh  install_script.sh  pyproject.toml
scripts/: eval.py  save_emb.py  train.py  train_v2.py  train_v3.py
src/news_rec_utils/: attention.py  batch_size_finder.py  components.py  config.py  data_classes.py  data_model_helper.py  data_utils.py  dummy.py  evaluation.py  latent_attention.py  modeling_helpers.py  modeling_utils.py  pipeline.py  trainer.py
