[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "news_rec_utils"
version = "2025.0.0"
dependencies = [
    "tqdm",
    "azure-identity",
    "azure-storage-blob",
    "python-dotenv",
    "joblib",
    "pandas",
    "scipy",
    "flash-attn",
    'einops',
    'datasets',
    "scikit-learn",
    "transformers==4.42.4",
    "pyarrow",
]
requires-python = ">=3.9"
authors = [{ name = "Ahmed Fahim", email = "afahim03@yahoo.com" }]
maintainers = [{ name = "Ahmed Fahim", email = "afahim03@yahoo.com" }]
description = "Some helper functions for my thesis project"
readme = "README.md"
license = { file = "LICENSE" }


[project.scripts]
store_process_data = "news_rec_utils.data_utils:main"
